kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: style-book-front
  name: style-book-front
spec:
  type: NodePort
  selector:
    app: style-book-front
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: http-management
      port: 8081
      protocol: TCP
      targetPort: 8081
