kustomize/base/ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: style-book-front-ingress-internal
  namespace: development-services
  labels:
    app: style-book-front
spec:
