kustomize/base/ingress-public-legacy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: style-book-front-ingress-public-legacy
  namespace: development-services
  labels:
    app: style-book-front
spec:
